# agent-spotlight

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  next.config.ts  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  mcp_servers.json  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/agent/: route.ts
src/components/: ResultItem.tsx  spotlight.tsx
src/utils/: fileIcons.tsx
