[package]
name = "agent-spotlight-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "agent-spotlight-app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.8", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.8", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-log = "2.0.0-beta.8"
window-vibrancy = "0.5.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
